# VM-Setup-Scripts

./: README.md  pyproject.toml
base-vm-setup/windows-server/: firstboot-sysprep.ps1
cli/: _common.py  clone_vm.py  update_vm.py
vm-automation/: .gitignore  clone_vm.py  pyproject.toml
vm-automation/vmlib/: datastore.py  esxi.py  validate.py
vm-deployment-automation/: gen_ws_config_iso.py  update_vm.py
vm-deployment-automation/vmlib/: vmx.py
