[project]
name = "vm-automation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "pycdlib>=1.16.0",
    "pyvmomi>=9.1.0.0",
    "requests>=2.34.2",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
]
[tool.pyright]
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnusedCallResult = false
reportCallIssue = false
reportAttributeAccessIssue = false
reportReturnType = false
reportFunctionMemberAccess = false
